add logging endpoint
